feat(SingleEntityQualityMeasureCalculator): Implement first 6 quality measures.